--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,23 @@ orbs:
 # Define a job to be invoked later in a workflow.
 # See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
+  configure_infrastructure: 
+    docker:
+      - image: python:3.7-alpine3.11
+    steps:
+      - checkout
+      - add_ssh_keys:
+      		# You can get this ID in the section where you registered the SSH Key
+          	fingerprints: ["b1:a5:c1:d6:46:c5:8c:44:c3:55:af:a2:95:d5:be:db"] 
+      - run:
+          name: Install Ansible
+          command: |
+            apk add --update ansible
+      - run:
+          name: Run Playbook and Configure server
+          command: |
+            ansible-playbook -i inventory main.yml
+
   create_infrastructure:
     docker:
       - image: amazon/aws-cli
@@ -26,12 +43,12 @@ jobs:
             --template-file template.yml \
             --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
             --region us-east-1
-  build: 
+  create_inventory: 
     docker:
       - image: cimg/base:stable
     steps:
       - checkout
-      - run: echo "hello world"
+      - run: ./createInventory.sh
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -40,3 +57,9 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - create_infrastructure
+      - create_inventory:
+          requires:
+            - create_infrastructure
+      - configure_infrastructure:
+          requires:
+            - create_inventory
