--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,7 +46,7 @@ jobs:
       - image: cimg/base:stable
     steps:
       - checkout
-      - run: ./createInventory.sh
+      - run: chmod ugo+x createInventory.sh && ./createInventory.sh
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
