--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
           command: |
             apk add --update ansible
       - run:
+          name: Gather IPs
+          command: |
+            chmod ugo+x createInventory.sh && ./createInventory.sh
+      - run:
           name: Run Playbook and Configure server
           command: |
             ansible-playbook -i inventory main.yml
@@ -41,13 +45,6 @@ jobs:
             --template-file template.yml \
             --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
             --region us-east-1
-  create_inventory: 
-    docker:
-      - image: amazon/aws-cli
-    steps:
-      - checkout
-      - run: chmod ugo+x createInventory.sh && ./createInventory.sh
-
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -55,9 +52,6 @@ workflows:
     # Inside the workflow, you define the jobs you want to run.
     jobs:
       - create_infrastructure
-      - create_inventory:
-          requires:
-            - create_infrastructure
       - configure_infrastructure:
           requires:
-            - create_inventory
+            - create_infrastructure
