--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
           command: |
             apk add --update ansible
       - run:
+          name: Install awscli
+          command: |
+            apt install awscli
+      - run:
           name: Gather IPs
           command: |
             chmod ugo+x createInventory.sh && ./createInventory.sh
