--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ jobs:
       - run:
           name: Install awscli
           command: |
-            apt install awscli
+            apk add --update awscli
       - run:
           name: Gather IPs
           command: |
