--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,13 @@ jobs:
       - run:
           name: Install awscli
           command: |
-            apk add --update awscli
+            apk add --no-cache \
+            python3 \
+            py3-pip \
+            && pip3 install --upgrade pip \
+            && pip3 install --no-cache-dir \
+            awscli \
+            && rm -rf /var/cache/apk/*
       - run:
           name: Gather IPs
           command: |
