--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,17 @@
 # Use the latest 2.1 version of CircleCI pipeline process engine.
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
-
+commands:
+      # Exercise - Rollback
+      destroy_environment:
+        steps:
+          - run:
+              name: Destroy environment
+              # ${CIRCLE_WORKFLOW_ID} is a Built-in environment variable 
+              # ${CIRCLE_WORKFLOW_ID:0:5} takes the first 5 chars of the variable CIRCLE_CI_WORKFLOW_ID 
+              when: on_fail
+              command: |
+                aws cloudformation delete-stack --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:7}
 # Orbs are reusable packages of CircleCI configuration that you may share across projects, enabling you to create encapsulated, parameterized commands, jobs, and executors that can be used across multiple projects.
 # See: https://circleci.com/docs/2.0/orb-intro/
 orbs:
@@ -54,6 +64,15 @@ jobs:
             --template-file template.yml \
             --stack-name myStack-${CIRCLE_WORKFLOW_ID:0:5} \
             --region us-east-1
+  smoke_test:
+    docker:
+      - image: alpine:latest
+    steps:
+      - run:
+          name: smoke test
+          command: return 1
+      - destroy_environment 
+        when: on_fail
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
@@ -64,3 +83,7 @@ workflows:
       - configure_infrastructure:
           requires:
             - create_infrastructure
+      - smoke_test:
+          requires:
+            - create_infrastructure
+            
