--- a/template.yml
+++ b/template.yml
@@ -10,8 +10,11 @@
        KeyName: udacityAnsible
        # Change this, as applicable to you
        # You may need to find out what instance types are available in your region - use https://cloud-images.ubuntu.com/locator/ec2/
-       ImageId: 'ami-007855ac798b5175e' 
+       ImageId: 'ami-053b0d53c279acc90' 
        InstanceType: t2.micro
+       Tags:
+        - Key: Name
+          Value: recette
    InstanceSecurityGroup:
      Type: 'AWS::EC2::SecurityGroup'
      Properties:
